<resources>
    <string name="app_name">Primo</string>
    <string name="open_primo_tag_from_photos">Open Primo Tag from Photos</string>
    <string name="total">Total</string>
    <string name="check_out">Check out</string>
    <string name="send_seller_a_message">Send seller a message</string>
    <string name="take_a_photo_of_a_primo_tag_to_nbuy_something">Take a photo of a Primo Tag to\nbuy something</string>
    <string name="history">History</string>
    <string name="wishlist">Wishlist</string>
    <string name="shipping">Shipping</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="address2">Address 2</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="state_province">State/Province</string>
    <string name="zip_postal_code">Zip/Postal Code</string>
    <string name="card_n">Card #</string>
    <string name="card_exp">Card exp</string>
    <string name="card_cvc">Card CVC</string>
    <string name="time_of_the_day_receive">Time of the day you would like to receive packages</string>
    <string name="morning">morning</string>
    <string name="afternoon">afternoon</string>
    <string name="evening">evening</string>
    <string name="receive_email_marketing">Receive email marketing from sellers</string>
    <string name="by_clicking_check_out">By clicking ‘SIGN UP’ you agree to our <font color="blue"><u>Terms and Conditions</u></font></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset_my_password">Reset My Password</string>
    <string name="thank_you">Thank you!</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="swipte_up_to_see">Swipe up to see your shopping cart</string>
    <string name="restore_my_password">Restore my password</string>
    <string name="sign_in">Login</string>
    <string name="enter_your_card_number">Enter your card number</string>
    <string name="enter_your_card_name">Enter your card name</string>
    <string name="infromation">Information</string>
    <string name="there_is_no_such_product">There is no such product in our stock.</string>
    <string name="please_check_your_internet_connection">Please, check your internet connection or try again later.</string>
    <string name="please_choose_at_least_one_product">Please, choose at least one product.</string>
    <string name="please_enter_a_valid_email">Please, enter a valid email address.</string>
    <string name="card_number_should_contain">Card number should contain 14, 15 or 16 digits.</string>
    <string name="please_fill_in_all_required_fields">Please, fill in all required fields.</string>
    <string name="please_enter_a_valid_phone_number">Please, enter a valid phone number.</string>
    <string name="your_cvc_number_should_contain">Your CVC number should contain 3 or 4 digits.</string>
    <string name="you_will_now_receive_email_with_newly">You will now receive email with newly generated password, please use it for log in.</string>
    <string name="the_email_address_is_not_registered">The email address is not registered.</string>
    <string name="sorry_something_went_wrong">Sorry, something went wrong check your connection.</string>
    <string name="the_email_you_have_chosen_already_exists">The email you have chosen already exists. Please try another one.</string>
    <string name="invalid_user_credentials">Invalid user credentials.</string>
    <string name="we_cant_process_your_payment_right_now">We can\'t process your payment right now. Please try again.</string>
    <string name="sorry_this_item_is_currently_out_of_stock">Sorry, this item is currently out of stock.</string>
    <string name="looks_like_your_credit_number_isnt_correct">Looks like your credit card number isn’t correct, please check again.</string>
    <string name="this_credit_card_number_information_is_not_supported">This credit card number information is not supported.</string>
    <string name="sorry_we_are_unable_to_assign_a_shipping_method">Sorry, we are unable to assign a shipping method for your address.</string>
    <string name="you_have_several_products_in_your_shopping_card">You have several products in your shopping card.</string>
    <string name="that_password_is_too_short">That password is too short. Please choose password at least 6 characters long.</string>
    <string name="password_does_not_match">Password does not match.</string>
    <string name="password_recovery_instructions_have_been_sent">Password recovery instructions have been sent to your email.</string>
    <string name="please_select_state">Please select state.</string>
    <string name="the_expration_date_of_your_credit_card">The expiration date of your credit card can’t be a past date.</string>
    <string name="access_to_camera">You need to allow access to Camera.</string>
    <string name="default_cost" translatable="false">US$ 0.00</string>
    <string name="charged_when_you_buy_something">charged when you buy something</string>
    <string name="only"><b>ONLY</b> charged when you buy something</string>
    <string name="shared_with_sellers">shared with sellers</string>
    <string name="aes_256" translatable="false">AES-256</string>
    <string name="encryption" translatable="false">encryption</string>
    <string name="satoshi" translatable="false">Satoshi</string>
    <string name="nakamoto" translatable="false">Nakamoto</string>
    <string name="user_domain_com">user@domain.com</string>
    <string name="_919_cheltenham_avenue">919 Cheltenham Avenue</string>
    <string name="melrose_park">Melrose Park</string>
    <string name="usa">USA</string>
    <string name="pa">PA</string>
    <string name="_19027">19027</string>
    <string name="email_lower_case">email</string>
    <string name="password_lower_case">password</string>
    <string name="_0">0</string>
    <string name="never"><b>NEVER</b> shared with sellers</string>
    <string name="aes"><b>SSL</b> encryption</string>
    <string name="ok">OK</string>
    <string name="please_choose_a_shipping_option">Please choose a shipping option.</string>
    <string name="next">Next</string>
    <string name="list_is_empty">List is empty</string>
    <string name="please_click_here">Please click here to <font color="red">re-send confirmation email</font></string>
    <string name="sign_up_is_not_confirmed">Sign Up is not confirmed</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="sign_up_text">Click SignUp button to send a confirmation email</string>
    <string name="update_text">Receive email marketing from sellers</string>
    <string name="check_email">Please check your email inbox or unlikely spambox and confirm your email</string>
    <string name="sign_up_message">Thank you, you are almost done! Please check your email inbox or unlikely spambox and confirm your email</string>
    <string name="size">Size:</string>
    <string name="sign_up">Sign up</string>
    <string name="problem_with_order">Unfortunately there was a problem with your order</string>
    <string name="card_holder">Card Holder</string>
    <string name="check_out_giggle">Please giggle your phone to complete checkout</string>
    <string name="maintenance">Maintenance</string>
    <string name="japan" translatable="false">Japan</string>
    <string name="performing_system_maintenance">If you are able to read this message, you are normal and we are not. Will be back soon!</string>
    <string name="turn_camera_permission">Please turn the camera permission back on for Primo</string>
    <string name="tap_here">Tap here</string>
    <string name="product_is_out_of_stock_add_to_wishlist">Product is out of stock and added to wishlist</string>
    <string name="no_stock">NO\nSTOCK</string>
    <string name="server_is_having_some_issue">Sorry, the server is having some issues. Please check back shortly</string>
    <string name="profile">Profile</string>
    <string name="payment">Payment</string>
    <string name="add">Add</string>
    <string name="secure_with">Secure with</string>
    <string name="are_you_sure_change_default_shipping">Are you sure you want to make this the default address?</string>
    <string name="are_you_sure_delete_shipping">Are you sure you want to delete this address?</string>
    <string name="are_you_sure_change_default_card">Are you sure you want to make this the default credit card?</string>
    <string name="are_you_sure_delete_card">Are you sure you want to delete this credit card?</string>
    <string name="are_you_sure_update_address">Are you sure to update this address info?</string>
    <string name="are_you_sure_update_card">Are you sure to update this card info?</string>
    <string name="enter_card_expiration">Enter card expiration date</string>
    <string name="enter_card_cvc">Enter card cvc</string>
    <string name="please_add_shipping_address">Please add at least one shipping address from settings</string>
    <string name="please_add_credit_card">Please add at least one payment information from settings</string>
    <string name="add_address">Add Address</string>
    <string name="add_payment">Add Payment</string>
    <string name="successfully_update">Successfully updated!</string>
    <string name="set_as_default">Set as default</string>
    <string name="cannot_delete_default_card">You can not delete this default credit card</string>
    <string name="cannot_delete_default_address">You can not delete this default address</string>
    <string name="must_have_default_card">You must have a default credit card. Please add another one to be able to set this as not default</string>
    <string name="must_have_default_address">You must have a default address. Please add another one to be able to set this as not default</string>
    <string name="set_your_country">Please set your country</string>
    <string name="default_text">Default</string>
    <string name="please_set_another_address_as_default">Please set another address as default from the address list</string>
    <string name="please_set_another_card_as_default">Please set another credit card as default from the payment list</string>
    <string name="stripe_not_found">Your credit card data not found. Please update it first</string>
    <string name="stripe_approve_with_id">The payment cannot be authorized. Please try again or contact your bank for more info</string>
    <string name="stripe_card_not_supported">Your card does not support this type of purchase. Please contact your bank for more info</string>
    <string name="stripe_card_velocity_exceeded">You have exceeded your credit limit. Please contact your bank for more info</string>
    <string name="stripe_currency_not_supported">Your card does not support the specified currency. Please contact your bank for more info</string>
    <string name="stripe_fraudulent">Your payment has been declined. Please contact your bank for more info</string>
    <string name="stripe_insufficient_funds">Your card has insufficient funds. Please use another card or payment method</string>
    <string name="stripe_invalid_account">Your card"'"s account is invalid. Please contact your bank for more info</string>
</resources>