<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/color_white">

    <com.primo.utils.views.PrefixedEditText
        android:id="@+id/email"
        style="@style/PrefixEditTextTheme"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_top_bottom_lines"
        android:hint="@string/email_lower_case"
        app:prefix_text="@string/email"/>

    <FrameLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email">

        <com.primo.utils.views.PrefixedEditText
            android:id="@+id/password"
            style="@style/PrefixEditTextTheme"
            android:fontFamily="sans-serif"
            android:hint="@string/password_lower_case"
            android:inputType="textPassword"
            android:maxLength="32"
            app:prefix_text="@string/password" />

        <ImageButton
            android:id="@+id/passwordEye"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:background="@drawable/password_show"
            android:layout_gravity="end"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="20dp"/>

    </FrameLayout>

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLayout"
        android:text="@string/forgot_password"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/confirmed_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot"
        android:gravity="center"
        android:text="@string/sign_up_is_not_confirmed"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/confirmed_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmed_text"
        android:gravity="center"
        android:text="@string/please_click_here"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/cancel_btn"
        style="@style/RedButton"
        android:text="@string/cancel"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/confirmed_link"
        android:layout_toLeftOf="@+id/center"
        android:layout_toStartOf="@+id/center"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/sign_in_btn"
        style="@style/RedButton"
        android:text="@string/sign_in"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_below="@id/confirmed_link"
        android:layout_toRightOf="@+id/center"
        android:layout_toEndOf="@+id/center"
        android:layout_gravity="center" />

    <Space
        android:id="@+id/center"
        android:layout_width="1px"
        android:layout_height="1px"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>