<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white">

    <TextView
        android:id="@+id/total_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_blue"
        android:text="@string/total" />

    <TextView
        android:id="@+id/total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/total_txt"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:text="@string/default_cost" />

    <Button
        android:id="@+id/checkout_btn"
        style="@style/RedButton"
        android:text="@string/check_out"
        android:layout_alignTop="@id/total_txt"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>